# dynamic-alert-project

./: .env.example  .gitignore  CONTRIBUTING.md  PROJECT_OPERATING_CONTEXT.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
configs/: modbus_profiles.json  mqtt_topics.json  snmp_oids.json
docs/: ai_strategy.md  architecture.md  deployment.md  discovery_strategy.md  platform_blueprint.md  roadmap.md  smoke_test_matrix.md  ui_strategy.md
migrations/: README  env.py
migrations/versions/: 20260630_000001_initial_platform.py  20260701_000002_background_jobs.py  20260701_000003_edge_runtime.py
src/dynamic_alert/: auth.py  bootstrap.py  config.py  database.py  edge_agent.py  main.py  models.py  schemas.py
src/dynamic_alert/api/: __init__.py  routes.py
src/dynamic_alert/services/: __init__.py  audit.py  background_jobs.py  container.py  demo_scenarios.py  discovery.py  edge_runtime.py  ingestion.py  job_execution.py  model_runtime.py  (+7 more)
templates/: index.html
tests/: test_audit.py  test_background_jobs.py  test_bootstrap.py  test_control_plane_smoke.py  test_demo_scenarios.py  test_edge_agent.py  test_edge_runtime.py  test_end_to_end_dbus_alert.py  test_hardening.py  test_job_execution.py  test_modbus_adapter.py  test_packet_capture_parsing.py  test_passive_observation.py  test_protocol_helpers.py  test_protocol_orchestration.py  test_rule_engine.py  test_semantic_heuristics.py  test_semantic_intelligence.py  test_semantic_map.py  test_settings.py  test_telegram.py  test_traffic_intelligence.py  test_unknown_candidate_workflow.py
(+12 files in other folders)
