[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-alert"
version = "0.1.0"
description = "Edge-first industrial telemetry discovery and alerting platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "asyncua>=1.1.5",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "paho-mqtt>=2.1.0",
  "pysnmp>=7.1.0",
  "pymodbus>=3.8.0",
  "scapy>=2.6.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
